--- a/IitKgpCourse/pandas_tutorial.ipynb
+++ b/IitKgpCourse/pandas_tutorial.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('/Users/ganesh.tata/Downloads/train.csv')"
+    "df = pd.read_csv('train.csv')"
    ]
   },
   {
